training loss decreases

--- a/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
+++ b/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#using dev examples here because it is a smaller dataset than train dataset\n",
+    "#using dev 100 examples here because it is a smaller dataset so faster to test my code\n",
     "dev_examples = processor.get_dev_examples('./esnli_dev.csv') "
    ]
   },
@@ -219,7 +219,8 @@
     "    def __init__(self, input_ids, attention_mask, decoder_input_ids):\n",
     "        self.input_ids = input_ids\n",
     "        self.attention_mask = attention_mask\n",
-    "        self.decoder_input_ids = decoder_input_ids"
+    "        self.decoder_input_ids = decoder_input_ids\n",
+    "        self.labels = decoder_input_ids"
    ]
   },
   {
@@ -239,7 +240,8 @@
    "source": [
     "print(dev_features[13].input_ids)\n",
     "print(dev_features[13].attention_mask)\n",
-    "print(dev_features[13].decoder_input_ids)"
+    "print(dev_features[13].decoder_input_ids)\n",
+    "print(dev_features[13].labels)"
    ]
   },
   {
@@ -268,7 +270,8 @@
     "# Convert to Tensors \n",
     "dev_all_input_ids = torch.tensor([f.input_ids for f in dev_features], dtype=torch.long)\n",
     "dev_all_attention_mask = torch.tensor([f.attention_mask for f in dev_features], dtype=torch.long)\n",
-    "dev_all_decoder_input_ids = torch.tensor([f.decoder_input_ids for f in dev_features], dtype=torch.long)"
+    "dev_all_decoder_input_ids = torch.tensor([f.decoder_input_ids for f in dev_features], dtype=torch.long)\n",
+    "dev_all_labels = torch.tensor([f.labels for f in dev_features], dtype=torch.long)"
    ]
   },
   {
@@ -277,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_dataset = TensorDataset(dev_all_input_ids, dev_all_attention_mask, dev_all_decoder_input_ids)"
+    "dev_dataset = TensorDataset(dev_all_input_ids, dev_all_attention_mask, dev_all_decoder_input_ids, dev_all_labels)"
    ]
   },
   {
@@ -306,10 +309,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#%load_ext autoreload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%reload_ext autoreload"
    ]
   },
   {
@@ -380,7 +394,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "trainer.train()"
