--- a/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
+++ b/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
@@ -16,7 +16,21 @@
     "import torch\n",
     "import os\n",
     "import sys\n",
-    "sys.path.append('./../../src')"
+    "sys.path.append('./../../src')\n",
+    "import random\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(0)\n",
+    "torch.cuda.manual_seed_all(0)\n",
+    "random.seed()\n",
+    "np.random.seed(0)"
    ]
   },
   {
@@ -303,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Try Training"
+    "### Training"
    ]
   },
   {
@@ -366,8 +380,7 @@
     "training_args = TrainingArguments(\n",
     "    output_dir='./results',          # output directory\n",
     "    num_train_epochs=3,              # total # of training epochs\n",
-    "    per_device_train_batch_size=8,  # batch size per device during training\n",
-    "    per_device_eval_batch_size=8,   # batch size for evaluation\n",
+    "    per_device_train_batch_size=4,  # batch size per device during training\n",
     "    warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
     "    weight_decay=0.01,               # strength of weight decay\n",
     "    logging_dir='./logs',            # directory for storing logs\n",
@@ -394,12 +407,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save & Load Model After Training"
    ]
   },
   {
@@ -408,8 +426,149 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "output_dir = \"./trained_models/\"\n",
+    "cuda_id = \"1\" # since there's something running on 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.save_model(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Load a trained model and vocabulary that you have fine-tuned\n",
+    "# model = EncoderDecoderModel.from_pretrained(output_dir)\n",
+    "# device = torch.device(\"cuda:\"+cuda_id)\n",
+    "# model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Empty out GPU memory?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load a trained model and vocabulary that you have fine-tuned\n",
+    "model = EncoderDecoderModel.from_pretrained(output_dir)\n",
+    "device = torch.device(\"cuda:\"+cuda_id)\n",
+    "model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.translate.bleu_score import sentence_bleu\n",
+    "from statistics import mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_metrics(pred):\n",
+    "    labels = pred.label_ids\n",
+    "    preds = pred.predictions.argmax(-1)\n",
+    "    \n",
+    "    sentence_bleu_scores = []\n",
+    "    for i in range(labels.shape[0]):\n",
+    "        labels_str = list(map(str, labels[i].tolist()))\n",
+    "        preds_str = list(map(str, preds[i].tolist()))\n",
+    "        score = sentence_bleu([labels_str], preds_str)\n",
+    "        sentence_bleu_scores.append(score)\n",
+    "    \n",
+    "    average_sentence_bleu_score = mean(sentence_bleu_scores)\n",
+    "    print('sentence_bleu_score: ', average_sentence_bleu_score)\n",
+    "    \n",
+    "    return {\n",
+    "        'sentence bleu': average_sentence_bleu_score\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_args = TrainingArguments(\n",
+    "    output_dir='./results',          # output directory\n",
+    "    num_train_epochs=3,              # total # of training epochs\n",
+    "    per_device_eval_batch_size=1,   # batch size for evaluation\n",
+    "    warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
+    "    weight_decay=0.01,               # strength of weight decay\n",
+    "    logging_dir='./logs',            # directory for storing logs\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Re-initialize trainer with the trained model and the old datasets\n",
+    "trainer = Trainer(\n",
+    "    model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
+    "    args=eval_args,                  # training arguments, defined above\n",
+    "    train_dataset=dev_features,         # training dataset\n",
+    "    eval_dataset=dev_features,            # evaluation dataset\n",
+    "    compute_metrics=compute_metrics,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate\n",
     "trainer.evaluate()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -421,9 +580,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rosa",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "rosa"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
