personalize eval args and renamed variables

--- a/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
+++ b/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
@@ -529,10 +529,7 @@
    "source": [
     "eval_args = TrainingArguments(\n",
     "    output_dir='./results',          # output directory\n",
-    "    num_train_epochs=3,              # total # of training epochs\n",
     "    per_device_eval_batch_size=1,   # batch size for evaluation\n",
-    "    warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
-    "    weight_decay=0.01,               # strength of weight decay\n",
     "    logging_dir='./logs',            # directory for storing logs\n",
     ")"
    ]
@@ -543,10 +540,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Re-initialize trainer with the trained model and the old datasets\n",
-    "trainer = Trainer(\n",
+    "evaluator = Trainer(\n",
     "    model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
-    "    args=eval_args,                  # training arguments, defined above\n",
+    "    args=eval_args,                  # eval arguments, defined above\n",
     "    train_dataset=dev_features,         # training dataset\n",
     "    eval_dataset=dev_features,            # evaluation dataset\n",
     "    compute_metrics=compute_metrics,\n",
@@ -560,7 +556,7 @@
    "outputs": [],
    "source": [
     "# Evaluate\n",
-    "trainer.evaluate()"
+    "evaluator.evaluate()"
    ]
   },
   {
