removed unnecessary code and added bleu scores

--- a/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
+++ b/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
@@ -88,9 +88,13 @@
     "                premise = line[2]\n",
     "                hypothesis = line[3]\n",
     "                text_a = premise + \" [SEP] \" + hypothesis # p + [SEP] + h\n",
-    "                text_b = line[4] # expl\n",
-    "                assert isinstance(text_a, str) and isinstance(text_b, str) and isinstance(label, str)\n",
-    "                examples.append(InputExample(guid=guid, text_a=text_a, text_b=text_b, label=label))\n",
+    "                text_b = line[4] # expl 1\n",
+    "                text_c = line[9] # expl 2\n",
+    "                text_d = line[14] # expl 3\n",
+    "                assert isinstance(text_a, str) and isinstance(text_b, str) and isinstance(label, str) \\\n",
+    "                and isinstance(text_c, str) and isinstance(text_d, str)\n",
+    "                examples.append(InputExample(guid=guid, text_a=text_a, text_b=text_b, \\\n",
+    "                                             label=label, text_c=text_c, text_d=text_d))\n",
     "        return examples"
    ]
   },
@@ -109,8 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#using dev 100 examples here because it is a smaller dataset so faster to test my code\n",
-    "dev_examples = processor.get_dev_examples('./esnli_dev.csv') "
+    "#using a smaller dataset so faster to test my code\n",
+    "train_examples = processor.get_train_examples('./esnli_dev.csv') "
    ]
   },
   {
@@ -119,8 +123,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(len(dev_examples))\n",
-    "print(dev_examples[13])"
+    "dev_examples = processor.get_dev_examples('./esnli_dev_100.csv') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(len(dev_examples))\n",
+    "# print(dev_examples[13])"
    ]
   },
   {
@@ -234,7 +247,16 @@
     "        self.input_ids = input_ids\n",
     "        self.attention_mask = attention_mask\n",
     "        self.decoder_input_ids = decoder_input_ids\n",
-    "        self.labels = decoder_input_ids"
+    "        self.labels = decoder_input_ids #expl1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_features = esnli_examples_to_features(train_examples, max_seq_len, tokenizer)"
    ]
   },
   {
@@ -252,65 +274,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(dev_features[13].input_ids)\n",
-    "print(dev_features[13].attention_mask)\n",
-    "print(dev_features[13].decoder_input_ids)\n",
-    "print(dev_features[13].labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Features to Tensor Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch.utils.data import (DataLoader, RandomSampler, SequentialSampler,\n",
-    "                              TensorDataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert to Tensors \n",
-    "dev_all_input_ids = torch.tensor([f.input_ids for f in dev_features], dtype=torch.long)\n",
-    "dev_all_attention_mask = torch.tensor([f.attention_mask for f in dev_features], dtype=torch.long)\n",
-    "dev_all_decoder_input_ids = torch.tensor([f.decoder_input_ids for f in dev_features], dtype=torch.long)\n",
-    "dev_all_labels = torch.tensor([f.labels for f in dev_features], dtype=torch.long)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dev_dataset = TensorDataset(dev_all_input_ids, dev_all_attention_mask, dev_all_decoder_input_ids, dev_all_labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data Collator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# assume we use the default_data_collator from HF"
+    "# print(dev_features[13].input_ids)\n",
+    "# print(dev_features[13].attention_mask)\n",
+    "# print(dev_features[13].decoder_input_ids)\n",
+    "# print(dev_features[13].labels)"
    ]
   },
   {
@@ -362,13 +329,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# initialize Bert2Bert\n",
-    "model = EncoderDecoderModel.from_encoder_decoder_pretrained('bert-base-uncased', 'bert-base-uncased') "
+    "# model = EncoderDecoderModel.from_encoder_decoder_pretrained('bert-base-uncased', 'bert-base-uncased') "
    ]
   },
   {
@@ -377,21 +342,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_args = TrainingArguments(\n",
-    "    output_dir='./results',          # output directory\n",
-    "    num_train_epochs=3,              # total # of training epochs\n",
-    "    per_device_train_batch_size=4,  # batch size per device during training\n",
-    "    warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
-    "    weight_decay=0.01,               # strength of weight decay\n",
-    "    logging_dir='./logs',            # directory for storing logs\n",
-    ")\n",
+    "# training_args = TrainingArguments(\n",
+    "#     output_dir='./results',          # output directory\n",
+    "#     num_train_epochs=3,              # total # of training epochs\n",
+    "#     per_device_train_batch_size=4,  # batch size per device during training\n",
+    "#     per_device_eval_batch_size=4,   # batch size for evaluation\n",
+    "#     warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
+    "#     weight_decay=0.01,               # strength of weight decay\n",
+    "#     logging_dir='./logs',            # directory for storing logs\n",
+    "# )\n",
     "\n",
-    "trainer = Trainer(\n",
-    "    model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
-    "    args=training_args,                  # training arguments, defined above\n",
-    "    train_dataset=dev_features,         # training dataset\n",
-    "    eval_dataset=dev_features            # evaluation dataset\n",
-    ")"
+    "# trainer = Trainer(\n",
+    "#     model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
+    "#     args=training_args,                  # training arguments, defined above\n",
+    "#     train_dataset=train_features,         # training dataset\n",
+    "#     eval_dataset=train_features            # evaluation dataset\n",
+    "# )"
    ]
   },
   {
@@ -410,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.train()"
+    "#trainer.train()"
    ]
   },
   {
@@ -436,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.save_model(output_dir)"
+    "#trainer.save_model(output_dir)"
    ]
   },
   {
@@ -464,7 +430,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.cuda.empty_cache()"
+    "# import gc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # maybe these lines should be in trainer's evaluate() function?\n",
+    "# gc.collect()\n",
+    "# torch.cuda.empty_cache()"
    ]
   },
   {
@@ -502,34 +479,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_metrics(pred):\n",
-    "    labels = pred.label_ids\n",
-    "    preds = pred.predictions.argmax(-1)\n",
-    "    \n",
-    "    sentence_bleu_scores = []\n",
-    "    for i in range(labels.shape[0]):\n",
-    "        labels_str = list(map(str, labels[i].tolist()))\n",
-    "        preds_str = list(map(str, preds[i].tolist()))\n",
-    "        score = sentence_bleu([labels_str], preds_str)\n",
-    "        sentence_bleu_scores.append(score)\n",
-    "    \n",
-    "    average_sentence_bleu_score = mean(sentence_bleu_scores)\n",
-    "    print('sentence_bleu_score: ', average_sentence_bleu_score)\n",
-    "    \n",
-    "    return {\n",
-    "        'sentence bleu': average_sentence_bleu_score\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "eval_args = TrainingArguments(\n",
     "    output_dir='./results',          # output directory\n",
-    "    per_device_eval_batch_size=1,   # batch size for evaluation\n",
+    "    per_device_eval_batch_size=2,   # batch size for evaluation\n",
     "    logging_dir='./logs',            # directory for storing logs\n",
     ")"
    ]
@@ -543,9 +495,7 @@
     "evaluator = Trainer(\n",
     "    model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
     "    args=eval_args,                  # eval arguments, defined above\n",
-    "    train_dataset=dev_features,         # training dataset\n",
     "    eval_dataset=dev_features,            # evaluation dataset\n",
-    "    compute_metrics=compute_metrics,\n",
     ")"
    ]
   },
@@ -556,7 +506,90 @@
    "outputs": [],
    "source": [
     "# Evaluate\n",
-    "evaluator.evaluate()"
+    "evaluator.eval_seq2seq_write_output()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute bleu scores based on csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.tensor as tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_bleu_score(pred_gold_csv):\n",
+    "    \"\"\"\n",
+    "    Compute bleu score based on the predicted explanations and the gold explanations in the csv file.\n",
+    "\n",
+    "    Input: csv file\n",
+    "    Output: bleu score\n",
+    "    \"\"\"\n",
+    "    bleu_scores = []\n",
+    "    with open(pred_gold_csv, newline='') as f:\n",
+    "        reader = csv.reader(f)\n",
+    "        for (i, line) in enumerate(reader):\n",
+    "            if i == 0:\n",
+    "                continue\n",
+    "            if i % 1000 == 0:\n",
+    "                print(i)\n",
+    "                print('pred_expl: ', tokenizer.decode(pred_expl))\n",
+    "                print('gold_expl_1: ', tokenizer.decode(gold_expl_1))\n",
+    "            pred_expl = eval(line[0])\n",
+    "            gold_expl_1 = eval(line[1])\n",
+    "            # process the explanations before passing to compute bleu scores: \n",
+    "            # get rid of the CLS, SEP, can PAD tokens - tokens with id 101, 102, and 0\n",
+    "            pred_expl = remove_special_tokens(pred_expl)\n",
+    "            gold_expl_1 = remove_special_tokens(gold_expl_1)\n",
+    "            \n",
+    "            bleu_scores.append(sentence_bleu([gold_expl_1], pred_expl))\n",
+    "    return mean(bleu_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_special_tokens(token_list):    \n",
+    "    sep_index = token_list.index(102) if 102 in token_list else -1\n",
+    "    cls_index = token_list.index(101) if 101 in token_list else -1\n",
+    "    \n",
+    "    result = []\n",
+    "    # remove [sep] and [pad]\n",
+    "    if sep_index == -1:\n",
+    "        result = token_list\n",
+    "    else:\n",
+    "        result = token_list[:sep_index]\n",
+    "    \n",
+    "    # remove [cls]\n",
+    "    if cls_index == -1:\n",
+    "        return result\n",
+    "    else:\n",
+    "        return result[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_bleu_score('./esnli_dev_model_expl_output.csv')"
    ]
   },
   {
@@ -565,6 +598,46 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.translate.bleu_score import corpus_bleu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hypothesis = ['This', 'is', 'a', 'cat'] \n",
+    "references = [hypothesis] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence_bleu(references, hypothesis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "references = [[['this', 'is', 'a', 'test'], ['this', 'test']]]\n",
+    "candidates = [['this', 'is', 'a', 'test']]\n",
+    "score = corpus_bleu(references, candidates)\n",
+    "print(score)"
+   ]
   },
   {
    "cell_type": "code",
