work with 3 explanations in esnli dev and test dataset

--- a/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
+++ b/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
@@ -193,14 +193,24 @@
     "\n",
     "        input_ids, input_mask = text_to_input_ids(example.text_a, max_seq_len, tokenizer)\n",
     "        decoder_input_ids, dummy = text_to_input_ids(example.text_b, max_seq_len, tokenizer)\n",
-    "    \n",
     "        assert len(input_ids) == max_seq_len\n",
     "        assert len(input_mask) == max_seq_len\n",
     "        assert len(decoder_input_ids) == max_seq_len\n",
+    "        \n",
+    "        expl2_ids = None\n",
+    "        expl3_ids = None\n",
+    "        if example.text_c != None and example.text_d != None:\n",
+    "            expl2_ids, dummy = text_to_input_ids(example.text_c, max_seq_len, tokenizer)\n",
+    "            expl3_ids, dummy = text_to_input_ids(example.text_d, max_seq_len, tokenizer)\n",
+    "            assert len(expl2_ids) == max_seq_len\n",
+    "            assert len(expl3_ids) == max_seq_len\n",
+    "        \n",
     "\n",
     "        features.append(EsnliInputFeatures(input_ids=input_ids,\n",
     "                                          attention_mask=input_mask,\n",
-    "                                          decoder_input_ids=decoder_input_ids))\n",
+    "                                          decoder_input_ids=decoder_input_ids,\n",
+    "                                          expl2_ids=expl2_ids,\n",
+    "                                          expl3_ids=expl3_ids))\n",
     "    return features"
    ]
   },
@@ -243,11 +253,13 @@
     "class EsnliInputFeatures(object):\n",
     "    \"\"\"A single set of features of data.\"\"\"\n",
     "\n",
-    "    def __init__(self, input_ids, attention_mask, decoder_input_ids):\n",
+    "    def __init__(self, input_ids, attention_mask, decoder_input_ids, expl2_ids, expl3_ids):\n",
     "        self.input_ids = input_ids\n",
     "        self.attention_mask = attention_mask\n",
     "        self.decoder_input_ids = decoder_input_ids\n",
-    "        self.labels = decoder_input_ids #expl1"
+    "        self.labels = decoder_input_ids #expl1\n",
+    "        self.expl2 = expl2_ids #expl2\n",
+    "        self.expl3 = expl3_ids #expl3"
    ]
   },
   {
@@ -506,7 +518,7 @@
    "outputs": [],
    "source": [
     "# Evaluate\n",
-    "evaluator.eval_seq2seq_write_output()"
+    "evaluator.eval_esnli_write_output()"
    ]
   },
   {
@@ -514,15 +526,6 @@
    "metadata": {},
    "source": [
     "### Compute bleu scores based on csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.tensor as tensor"
    ]
   },
   {
@@ -544,18 +547,24 @@
     "        for (i, line) in enumerate(reader):\n",
     "            if i == 0:\n",
     "                continue\n",
-    "            if i % 1000 == 0:\n",
+    "            if i % 30 == 0:\n",
     "                print(i)\n",
     "                print('pred_expl: ', tokenizer.decode(pred_expl))\n",
     "                print('gold_expl_1: ', tokenizer.decode(gold_expl_1))\n",
+    "                print('gold_expl_2: ', tokenizer.decode(gold_expl_2))\n",
+    "                print('gold_expl_3: ', tokenizer.decode(gold_expl_3))\n",
     "            pred_expl = eval(line[0])\n",
     "            gold_expl_1 = eval(line[1])\n",
+    "            gold_expl_2 = eval(line[2])\n",
+    "            gold_expl_3 = eval(line[3])\n",
     "            # process the explanations before passing to compute bleu scores: \n",
     "            # get rid of the CLS, SEP, can PAD tokens - tokens with id 101, 102, and 0\n",
     "            pred_expl = remove_special_tokens(pred_expl)\n",
     "            gold_expl_1 = remove_special_tokens(gold_expl_1)\n",
+    "            gold_expl_2 = remove_special_tokens(gold_expl_2)\n",
+    "            gold_expl_3 = remove_special_tokens(gold_expl_3)\n",
     "            \n",
-    "            bleu_scores.append(sentence_bleu([gold_expl_1], pred_expl))\n",
+    "            bleu_scores.append(sentence_bleu([gold_expl_1, gold_expl_2, gold_expl_3], pred_expl))\n",
     "    return mean(bleu_scores)"
    ]
   },
@@ -589,62 +598,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_bleu_score('./esnli_dev_model_expl_output.csv')"
+    "get_bleu_score('./esnli_dev_output_3gold.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.translate.bleu_score import corpus_bleu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hypothesis = ['This', 'is', 'a', 'cat'] \n",
-    "references = [hypothesis] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentence_bleu(references, hypothesis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "references = [[['this', 'is', 'a', 'test'], ['this', 'test']]]\n",
-    "candidates = [['this', 'is', 'a', 'test']]\n",
-    "score = corpus_bleu(references, candidates)\n",
-    "print(score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
