--- a/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
+++ b/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
@@ -34,6 +34,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_path = '/data/rosa/data/esnli/esnli_train.csv'\n",
+    "dev_data_path = './sanity-checks/esnli_dev_100.csv'\n",
+    "cached_train_features_file = './cache/cached_train_esnli'\n",
+    "save_trained_model_dir = \"./esnli_train_trained_model/\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -114,7 +126,7 @@
    "outputs": [],
    "source": [
     "#using a smaller dataset so faster to test my code\n",
-    "train_examples = processor.get_train_examples('./esnli_dev.csv') "
+    "train_examples = processor.get_train_examples(train_data_path) "
    ]
   },
   {
@@ -123,17 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_examples = processor.get_dev_examples('./esnli_dev_100.csv') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(len(dev_examples))\n",
-    "# print(dev_examples[13])"
+    "dev_examples = processor.get_dev_examples(dev_data_path) "
    ]
   },
   {
@@ -268,7 +270,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_features = esnli_examples_to_features(train_examples, max_seq_len, tokenizer)"
+    "# Cache training dataset features\n",
+    "if os.path.exists(cached_train_features_file):\n",
+    "    logger.info(\"Loading features from cached file %s\", cached_train_features_file)\n",
+    "    train_features = torch.load(cached_train_features_file)\n",
+    "else:\n",
+    "    train_features = esnli_examples_to_features(train_examples, max_seq_len, tokenizer)\n",
+    "    logger.info(\"Saving training features into cached file %s\", cached_train_features_file)\n",
+    "    torch.save(train_features, cached_train_features_file)"
    ]
   },
   {
@@ -278,18 +287,6 @@
    "outputs": [],
    "source": [
     "dev_features = esnli_examples_to_features(dev_examples, max_seq_len, tokenizer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(dev_features[13].input_ids)\n",
-    "# print(dev_features[13].attention_mask)\n",
-    "# print(dev_features[13].decoder_input_ids)\n",
-    "# print(dev_features[13].labels)"
    ]
   },
   {
@@ -344,8 +341,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize Bert2Bert\n",
-    "# model = EncoderDecoderModel.from_encoder_decoder_pretrained('bert-base-uncased', 'bert-base-uncased') "
+    "initialize Bert2Bert\n",
+    "model = EncoderDecoderModel.from_encoder_decoder_pretrained('bert-base-uncased', 'bert-base-uncased') "
    ]
   },
   {
@@ -354,22 +351,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# training_args = TrainingArguments(\n",
-    "#     output_dir='./results',          # output directory\n",
-    "#     num_train_epochs=3,              # total # of training epochs\n",
-    "#     per_device_train_batch_size=4,  # batch size per device during training\n",
-    "#     per_device_eval_batch_size=4,   # batch size for evaluation\n",
-    "#     warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
-    "#     weight_decay=0.01,               # strength of weight decay\n",
-    "#     logging_dir='./logs',            # directory for storing logs\n",
-    "# )\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir='./checkpoint-train-results',          # output directory\n",
+    "    num_train_epochs=3,              # total # of training epochs\n",
+    "    per_device_train_batch_size=4,  # batch size per device during training\n",
+    "    per_device_eval_batch_size=4,   # batch size for evaluation\n",
+    "    warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
+    "    weight_decay=0.01,               # strength of weight decay\n",
+    "    logging_dir='./train-logs',            # directory for storing logs\n",
+    ")\n",
     "\n",
-    "# trainer = Trainer(\n",
-    "#     model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
-    "#     args=training_args,                  # training arguments, defined above\n",
-    "#     train_dataset=train_features,         # training dataset\n",
-    "#     eval_dataset=train_features            # evaluation dataset\n",
-    "# )"
+    "trainer = Trainer(\n",
+    "    model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
+    "    args=training_args,                  # training arguments, defined above\n",
+    "    train_dataset=train_features,         # training dataset\n",
+    "    eval_dataset=train_features            # evaluation dataset\n",
+    ")"
    ]
   },
   {
@@ -378,24 +375,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# call trainer.train() to train and trainer.evaluate(). \n",
-    "# The first argument returned from forward must be the loss which you wish to optimize."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#trainer.train()"
+    "# Call trainer.train() to train.\n",
+    "# The first argument returned from forward must be the loss which you wish to optimize.\n",
+    "trainer.train()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save & Load Model After Training"
+    "### Save Model After Training"
    ]
   },
   {
@@ -404,7 +393,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dir = \"./trained_models/\"\n",
+    "output_dir = save_trained_model_dir\n",
     "cuda_id = \"1\" # since there's something running on 0"
    ]
   },
@@ -414,46 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#trainer.save_model(output_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Load a trained model and vocabulary that you have fine-tuned\n",
-    "# model = EncoderDecoderModel.from_pretrained(output_dir)\n",
-    "# device = torch.device(\"cuda:\"+cuda_id)\n",
-    "# model.to(device)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Empty out GPU memory?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import gc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # maybe these lines should be in trainer's evaluate() function?\n",
-    "# gc.collect()\n",
-    "# torch.cuda.empty_cache()"
+    "trainer.save_model(output_dir)"
    ]
   },
   {
@@ -481,20 +431,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.translate.bleu_score import sentence_bleu\n",
-    "from statistics import mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "eval_args = TrainingArguments(\n",
-    "    output_dir='./results',          # output directory\n",
+    "    output_dir='./checkpoint-eval-results',          # output directory\n",
     "    per_device_eval_batch_size=2,   # batch size for evaluation\n",
-    "    logging_dir='./logs',            # directory for storing logs\n",
+    "    logging_dir='./eval-logs',            # directory for storing logs\n",
     ")"
    ]
   },
@@ -534,6 +474,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from nltk.translate.bleu_score import sentence_bleu, corpus_bleu\n",
+    "from statistics import mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_bleu_score(pred_gold_csv):\n",
     "    \"\"\"\n",
     "    Compute bleu score based on the predicted explanations and the gold explanations in the csv file.\n",
@@ -547,7 +497,7 @@
     "        for (i, line) in enumerate(reader):\n",
     "            if i == 0:\n",
     "                continue\n",
-    "            if i % 30 == 0:\n",
+    "            if i % 1000 == 0:\n",
     "                print(i)\n",
     "                print('pred_expl: ', tokenizer.decode(pred_expl))\n",
     "                print('gold_expl_1: ', tokenizer.decode(gold_expl_1))\n",
@@ -564,7 +514,7 @@
     "            gold_expl_2 = remove_special_tokens(gold_expl_2)\n",
     "            gold_expl_3 = remove_special_tokens(gold_expl_3)\n",
     "            \n",
-    "            bleu_scores.append(sentence_bleu([gold_expl_1, gold_expl_2, gold_expl_3], pred_expl))\n",
+    "            bleu_scores.append(corpus_bleu([[gold_expl_1, gold_expl_2, gold_expl_3]], [pred_expl]))\n",
     "    return mean(bleu_scores)"
    ]
   },
@@ -598,8 +548,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_bleu_score('./esnli_dev_output_3gold.csv')"
+    "get_bleu_score('./dafsdhfasjg.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
