--- a/examples/EncoderDecoderModel/bert2bert-HF-example.ipynb
+++ b/examples/EncoderDecoderModel/bert2bert-HF-example.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# initialize Bert2Bert\n",
@@ -144,6 +146,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "generated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "generated_txt = tokenizer.decode(generated.squeeze(0).tolist())\n",
     "print(generated_txt)"
    ]
@@ -151,9 +162,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rosa",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "rosa"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
