update training args

--- a/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
+++ b/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
@@ -341,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "initialize Bert2Bert\n",
+    "#initialize Bert2Bert\n",
     "model = EncoderDecoderModel.from_encoder_decoder_pretrained('bert-base-uncased', 'bert-base-uncased') "
    ]
   },
@@ -355,10 +355,13 @@
     "    output_dir='./checkpoint-train-results',          # output directory\n",
     "    num_train_epochs=3,              # total # of training epochs\n",
     "    per_device_train_batch_size=4,  # batch size per device during training\n",
-    "    per_device_eval_batch_size=4,   # batch size for evaluation\n",
-    "    warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
     "    weight_decay=0.01,               # strength of weight decay\n",
     "    logging_dir='./train-logs',            # directory for storing logs\n",
+    "    do_train=True,\n",
+    "    logging_steps=5000,\n",
+    "    save_steps=5000,\n",
+    "    overwrite_output_dir=True,\n",
+    "    warmup_steps=1000,                # number of warmup steps for learning rate scheduler\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
@@ -497,7 +500,7 @@
     "        for (i, line) in enumerate(reader):\n",
     "            if i == 0:\n",
     "                continue\n",
-    "            if i % 1000 == 0:\n",
+    "            if i % 50 == 0:\n",
     "                print(i)\n",
     "                print('pred_expl: ', tokenizer.decode(pred_expl))\n",
     "                print('gold_expl_1: ', tokenizer.decode(gold_expl_1))\n",
