esnli bert2bert with new eval

--- a/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
+++ b/examples/EncoderDecoderModel/esnli_bert2bert.ipynb
@@ -40,9 +40,9 @@
    "outputs": [],
    "source": [
     "train_data_path = '/data/rosa/data/esnli/esnli_train.csv'\n",
-    "dev_data_path = './sanity-checks/esnli_dev_100.csv'\n",
+    "dev_data_path = './sanity-checks/esnli_dev.csv'\n",
     "cached_train_features_file = './cache/cached_train_esnli'\n",
-    "save_trained_model_dir = \"./esnli_train_trained_model/\""
+    "save_trained_model_dir = './esnli_train_trained_model/'"
    ]
   },
   {
@@ -125,8 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#using a smaller dataset so faster to test my code\n",
-    "train_examples = processor.get_train_examples(train_data_path) "
+    "# #using a smaller dataset so faster to test my code\n",
+    "# train_examples = processor.get_train_examples(train_data_path) "
    ]
   },
   {
@@ -270,14 +270,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cache training dataset features\n",
-    "if os.path.exists(cached_train_features_file):\n",
-    "    logger.info(\"Loading features from cached file %s\", cached_train_features_file)\n",
-    "    train_features = torch.load(cached_train_features_file)\n",
-    "else:\n",
-    "    train_features = esnli_examples_to_features(train_examples, max_seq_len, tokenizer)\n",
-    "    logger.info(\"Saving training features into cached file %s\", cached_train_features_file)\n",
-    "    torch.save(train_features, cached_train_features_file)"
+    "# # Cache training dataset features\n",
+    "# if os.path.exists(cached_train_features_file):\n",
+    "#     logger.info(\"Loading features from cached file %s\", cached_train_features_file)\n",
+    "#     train_features = torch.load(cached_train_features_file)\n",
+    "# else:\n",
+    "#     train_features = esnli_examples_to_features(train_examples, max_seq_len, tokenizer)\n",
+    "#     logger.info(\"Saving training features into cached file %s\", cached_train_features_file)\n",
+    "#     torch.save(train_features, cached_train_features_file)"
    ]
   },
   {
@@ -304,7 +304,7 @@
    },
    "outputs": [],
    "source": [
-    "#%load_ext autoreload"
+    "%load_ext autoreload"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%reload_ext autoreload"
+    "%reload_ext autoreload"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%autoreload 2"
+    "%autoreload 2"
    ]
   },
   {
@@ -341,8 +341,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#initialize Bert2Bert\n",
-    "model = EncoderDecoderModel.from_encoder_decoder_pretrained('bert-base-uncased', 'bert-base-uncased') "
+    "# #initialize Bert2Bert\n",
+    "# model = EncoderDecoderModel.from_encoder_decoder_pretrained('bert-base-uncased', 'bert-base-uncased') "
    ]
   },
   {
@@ -351,25 +351,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_args = TrainingArguments(\n",
-    "    output_dir='./checkpoint-train-results',          # output directory\n",
-    "    num_train_epochs=3,              # total # of training epochs\n",
-    "    per_device_train_batch_size=4,  # batch size per device during training\n",
-    "    weight_decay=0.01,               # strength of weight decay\n",
-    "    logging_dir='./train-logs',            # directory for storing logs\n",
-    "    do_train=True,\n",
-    "    logging_steps=5000,\n",
-    "    save_steps=5000,\n",
-    "    overwrite_output_dir=True,\n",
-    "    warmup_steps=1000,                # number of warmup steps for learning rate scheduler\n",
-    ")\n",
+    "# training_args = TrainingArguments(\n",
+    "#     output_dir='./checkpoint-train-results',          # output directory\n",
+    "#     num_train_epochs=3,              # total # of training epochs\n",
+    "#     per_device_train_batch_size=4,  # batch size per device during training\n",
+    "#     weight_decay=0.01,               # strength of weight decay\n",
+    "#     logging_dir='./train-logs',            # directory for storing logs\n",
+    "#     do_train=True,\n",
+    "#     logging_steps=5000,\n",
+    "#     save_steps=5000,\n",
+    "#     overwrite_output_dir=True,\n",
+    "#     warmup_steps=1000,                # number of warmup steps for learning rate scheduler\n",
+    "# )\n",
     "\n",
-    "trainer = Trainer(\n",
-    "    model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
-    "    args=training_args,                  # training arguments, defined above\n",
-    "    train_dataset=train_features,         # training dataset\n",
-    "    eval_dataset=train_features            # evaluation dataset\n",
-    ")"
+    "# trainer = Trainer(\n",
+    "#     model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
+    "#     args=training_args,                  # training arguments, defined above\n",
+    "#     train_dataset=train_features,         # training dataset\n",
+    "#     eval_dataset=train_features            # evaluation dataset\n",
+    "# )"
    ]
   },
   {
@@ -378,9 +378,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Call trainer.train() to train.\n",
-    "# The first argument returned from forward must be the loss which you wish to optimize.\n",
-    "trainer.train()"
+    "# # Call trainer.train() to train.\n",
+    "# # The first argument returned from forward must be the loss which you wish to optimize.\n",
+    "# trainer.train()"
    ]
   },
   {
@@ -406,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.save_model(output_dir)"
+    "# trainer.save_model(output_dir)"
    ]
   },
   {
@@ -434,10 +434,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.config.max_length=128\n",
+    "model.config.decoder_start_token_id = 101\n",
+    "model.config.eos_token_id = 102"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "eval_args = TrainingArguments(\n",
     "    output_dir='./checkpoint-eval-results',          # output directory\n",
     "    per_device_eval_batch_size=2,   # batch size for evaluation\n",
-    "    logging_dir='./eval-logs',            # directory for storing logs\n",
+    "    do_eval = True,\n",
+    "    predict_from_generate=True\n",
     ")"
    ]
   },
@@ -500,12 +512,6 @@
     "        for (i, line) in enumerate(reader):\n",
     "            if i == 0:\n",
     "                continue\n",
-    "            if i % 50 == 0:\n",
-    "                print(i)\n",
-    "                print('pred_expl: ', tokenizer.decode(pred_expl))\n",
-    "                print('gold_expl_1: ', tokenizer.decode(gold_expl_1))\n",
-    "                print('gold_expl_2: ', tokenizer.decode(gold_expl_2))\n",
-    "                print('gold_expl_3: ', tokenizer.decode(gold_expl_3))\n",
     "            pred_expl = eval(line[0])\n",
     "            gold_expl_1 = eval(line[1])\n",
     "            gold_expl_2 = eval(line[2])\n",
@@ -516,6 +522,12 @@
     "            gold_expl_1 = remove_special_tokens(gold_expl_1)\n",
     "            gold_expl_2 = remove_special_tokens(gold_expl_2)\n",
     "            gold_expl_3 = remove_special_tokens(gold_expl_3)\n",
+    "#             if i % 5 == 0:\n",
+    "#                 print(i)\n",
+    "#                 print('pred_expl: ', tokenizer.decode(pred_expl))\n",
+    "#                 print('gold_expl_1: ', tokenizer.decode(gold_expl_1))\n",
+    "#                 print('gold_expl_2: ', tokenizer.decode(gold_expl_2))\n",
+    "#                 print('gold_expl_3: ', tokenizer.decode(gold_expl_3))\n",
     "            \n",
     "            bleu_scores.append(corpus_bleu([[gold_expl_1, gold_expl_2, gold_expl_3]], [pred_expl]))\n",
     "    return mean(bleu_scores)"
@@ -551,7 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_bleu_score('./dafsdhfasjg.csv')"
+    "get_bleu_score('./08:11_09:58:20.csv')"
    ]
   },
   {
